--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <ul class="advantages-list">
             <li class="advantages-item white-text">
                 <h3 class="advantages-title">Настоящий городок</h3>
-                <p class="advatages-description">№1 Седона - не аттракцион для туристов, там течёт своя жизнь</p>
+                <p class="advatages-description white-text">№1 Седона - не аттракцион для туристов, там течёт своя жизнь</p>
             </li>
             <li class="advantages-item">
               <div class="advantages-image1">
@@ -86,7 +86,7 @@
             </li>
             <li class="advantages-item white-text">
               <h3 class="advantages-title">Там есть мост дьявола</h3>
-              <p class="advatages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              <p class="advatages-description white-text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
         </ul>
 
