--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 
 <body>
     <header class="page-header">
+            <nav class="navigation">
+              <a href="index.html" class="logo">
+                <img src="images/logo.svg" width="140" height="70" alt="Логотип сайта Седона">
+            </a>
 
-        <a href="index.html" class="logo">
-            <img src="images/logo.svg" width="140" height="70" alt="Логотип сайта Седона">
-        </a>
-
-        <nav class="navigation">
             <ul class="navigation-list">
                 <li class="navigation-item">
                     <a class="navigation-link navigation-link-current">Главная</a>
@@ -26,7 +25,7 @@
                 </li>
             </ul>
 
-            <ul class="controls">
+            <ul class="controls-list">
               <li class="controls-item">
                 <a class="controls-link" href="">Поиск</a>
               </li>
@@ -47,7 +46,7 @@
         <img class="hero-background-sedona" src="images/sedona-title.svg" alt="Седона. Потому что Гранд-Каньон ацтой">
       </div>
        <section class="description">
-        <h1 class="description-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+        <h1 class="description-title">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h1>
         <p class="description-reasons">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
 
@@ -58,7 +57,7 @@
                 <h3 class="advantages-title">Настоящий городок</h3>
                 <p class="advatages-description white-text">№1 Седона - не аттракцион для туристов, там течёт своя жизнь</p>
             </li>
-            <li class="advantages-item">
+            <li class="advantages-item wide-element">
               <div class="advantages-image1">
                 <span class="visually-hidden">
                   <img src="#" alt="Двухэтажный котеджный домик под названием 'Open Range' на фоне гор.">
@@ -77,7 +76,7 @@
                 <h3 class="advantages-title">Мало туристов</h3>
                 <p class="advatages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
-            <li class="advantages-item">
+            <li class="advantages-item wide-element">
               <div class="advantages-image2">
                 <span class="visually-hidden">
                   <img src="#" alt="Прекрасный вид на каньон. Внутри которого находятся зеленые деревья.">
@@ -124,39 +123,41 @@
     </main>
 
     <footer class="page-footer">
-      <section class="footer-socials">
-        <h2 class="visually-hidden">Социальные сети</h2>
-        <ul class="footer-socials-list">
-            <li class="footer-socials-item">
-                <a href="https://vk.com/htmlacademy" class="button-vk">
-                <span class="visually-hidden">Вконтакте</span>
-                </a>
-            </li>
-            <li class="footer-socials-item">
-                <a href="https://t.me/htmlacademy" class="button-telegram">
-                <span class="visually-hidden">Телеграм</span>
-                </a>
-            </li>
-            <li class="footer-socials-item">
-                <a href="https://www.youtube.com/user/htmlacademyru" class="button-youtube">
-                <span class="visually-hidden">Ютуб</span>
-                </a>
-            </li>
-        </ul>
-      </section>
+      <div class="footer-container">
+        <section class="footer-socials">
+          <h2 class="visually-hidden">Социальные сети</h2>
+          <ul class="footer-socials-list">
+              <li class="footer-socials-item">
+                  <a href="https://vk.com/htmlacademy" class="button-vk">
+                  <span class="visually-hidden">Вконтакте</span>
+                  </a>
+              </li>
+              <li class="footer-socials-item">
+                  <a href="https://t.me/htmlacademy" class="button-telegram">
+                  <span class="visually-hidden">Телеграм</span>
+                  </a>
+              </li>
+              <li class="footer-socials-item">
+                  <a href="https://www.youtube.com/user/htmlacademyru" class="button-youtube">
+                  <span class="visually-hidden">Ютуб</span>
+                  </a>
+              </li>
+          </ul>
+        </section>
 
-      <section class="footer-contacts">
-        <h2 class="visually-hidden">Наш номер телефона</h2>
-        <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-      </section>
+        <section class="footer-contacts">
+          <h2 class="visually-hidden">Наш номер телефона</h2>
+          <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        </section>
 
-      <section class="footer-author">
-        <h2 class="visually-hidden">Сайт htmlacademy</h2>
-        <a class="htmlacademy-link" href="https://htmlacademy.ru/">
-          <img src="images/html-academy-logo.svg" alt="Адрес сайта Html Academy">
-        <span class="visually-hidden">.htmlacademy</span>
-        </a>
-      </section>
+        <section class="footer-author">
+          <h2 class="visually-hidden">Сайт htmlacademy</h2>
+          <a class="htmlacademy-link" href="https://htmlacademy.ru/">
+            <img src="images/html-academy-logo.svg" alt="Адрес сайта Html Academy">
+          <span class="visually-hidden">.htmlacademy</span>
+          </a>
+        </section>
+      </div>
     </footer>
 </body>
 </html>
