--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
         <img src="images/logo.svg" width="140" height="70" alt="Логотип сайта Седона">
       </a>
 
-    <ul class="navigation-list reset-list">
+    <ul class="navigation-list">
         <li class="navigation-item">
             <a href="index.html" class="navigation-link ">Главная</a>
         </li>
@@ -25,7 +25,7 @@
         </li>
     </ul>
 
-    <ul class="controls-list reset-list">
+    <ul class="controls-list">
       <li class="controls-item">
         <a class="controls-link" href="">Поиск</a>
       </li>
@@ -43,7 +43,7 @@
     <main class="inner">
         <section class="inner-catalog">
             <h1 class="inner-catalog-title">Гостинницы Седоны</h1>
-            <ul class="breadcrumbs-list reset-list">
+            <ul class="breadcrumbs-list">
                 <li class="breadcrumbs-item">
                     <a class="breadcrumbs-link" href="index.html">
                     <span class="visually-hidden">Главная</span>
@@ -113,7 +113,7 @@
                 <option value="popular">Сначала популярные</option>
             </select>
 
-            <ul class="sorting-icons-list reset-list">
+            <ul class="sorting-icons-list">
                 <li class="sorting-icons-item">
                     <button class="sorting-icons-btn" type="button">tile</button>
                     <span class="visually-hidden">Отображение плиткой</span>
@@ -128,7 +128,7 @@
                 </li>
             </ul>
           </div>
-            <ul class="hotels-list reset-list">
+            <ul class="hotels-list">
                 <li class="hotels-item">
                     <img src="images/catalog/hotel-1.jpg" width="300" height="212" alt="Ущелье, с красивым звездным небом">
                     <h3 class="hotels-title">Amara Resort & Spa</h3>
@@ -167,7 +167,7 @@
                 </li>
             </ul>
 
-            <ul class="pagination-list reset-list">
+            <ul class="pagination-list">
                 <li class="pagination-item">
                   <a class="pagination-link" href="#">1</a>
                 </li>
@@ -205,7 +205,7 @@
       <div class="footer-container">
         <section class="footer-socials">
           <h2 class="visually-hidden">Социальные сети</h2>
-          <ul class="footer-socials-list reset-list">
+          <ul class="footer-socials-list">
               <li class="footer-socials-item">
                   <a href="https://vk.com/htmlacademy" class="button-vk">
                   <span class="visually-hidden">Вконтакте</span>
