--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <img src="images/logo.svg" width="140" height="70" alt="Логотип сайта Седона">
           </a>
 
-          <ul class="navigation-list reset-list">
+          <ul class="navigation-list">
                 <li class="navigation-item">
                     <a class="navigation-link navigation-link-current">Главная</a>
                 </li>
@@ -25,7 +25,7 @@
                 </li>
           </ul>
 
-          <ul class="controls-list reset-list">
+          <ul class="controls-list">
               <li class="controls-item">
                 <a class="controls-link" href="">Поиск</a>
               </li>
@@ -52,7 +52,7 @@
 
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
-        <ul class="advantages-list reset-list">
+        <ul class="advantages-list">
             <li class="advantages-item white-text">
                 <h3 class="advantages-title">Настоящий городок</h3>
                 <p class="advatages-description white-text">№1 Седона - не аттракцион для туристов, там течёт своя жизнь</p>
@@ -89,7 +89,7 @@
           </li>
         </ul>
 
-        <ul class="advantages-list reset-list">
+        <ul class="advantages-list">
           <li class="advantages-item">
             <h3 class="advantages-title">Жильё</h3>
             <p class="advatages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
@@ -126,7 +126,7 @@
       <div class="footer-container">
         <section class="footer-socials">
           <h2 class="visually-hidden">Социальные сети</h2>
-          <ul class="footer-socials-list reset-list">
+          <ul class="footer-socials-list">
               <li class="footer-socials-item">
                   <a href="https://vk.com/htmlacademy" class="button-vk">
                   <span class="visually-hidden">Вконтакте</span>
