Изменяет имя класса контейнера

--- a/catalog.html
+++ b/catalog.html
@@ -54,7 +54,7 @@
                 </li>
             </ul>
               <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="post">
-                <div class="catalog-container">
+                <div class="filter-container">
                   <fieldset class="catalog-filter-group">
                       <legend class="catalog-filter-title">Инфрастуктура:</legend>
                       <label class="control">
