--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
       </section>
     </main>
 
-    <footer class="page-footer">
-      <div class="footer-container">
+    <footer class="page-footer footer-container">
         <section class="footer-socials">
           <h2 class="visually-hidden">Социальные сети</h2>
           <ul class="footer-socials-list">
@@ -157,7 +156,6 @@
           <span class="visually-hidden">.htmlacademy</span>
           </a>
         </section>
-      </div>
     </footer>
 </body>
 </html>
