Добавляет мелкие сетки на флексах

--- a/catalog.html
+++ b/catalog.html
@@ -12,7 +12,7 @@
       <a href="index.html" class="logo">
         <img src="images/logo.svg" width="140" height="70" alt="Логотип сайта Седона">
       </a>
-
+  <div class="nav-container">
     <ul class="navigation-list">
         <li class="navigation-item">
             <a href="index.html" class="navigation-link ">Главная</a>
@@ -26,17 +26,18 @@
     </ul>
 
     <ul class="controls-list">
-      <li class="controls-item">
-        <a class="controls-link" href="">Поиск</a>
-      </li>
-      <li class="controls-item">
-        <a class="controls-link" href="">Избранное</a>
-      </li>
-      <li class="controls-item ">
-         <a class="button controls-link" href="#">Хочу сюда!</a>
-      </li>
-  </ul>
-</nav>
+        <li class="controls-item">
+          <a class="controls-link" href="">Поиск</a>
+        </li>
+        <li class="controls-item">
+          <a class="controls-link" href="">Избранное</a>
+        </li>
+        <li class="controls-item ">
+          <a class="button controls-link" href="#">Хочу сюда!</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 </header>
 
 
@@ -130,7 +131,7 @@
           </div>
             <ul class="hotels-list">
                 <li class="hotels-item">
-                    <img src="images/catalog/hotel-1.jpg" width="300" height="212" alt="Ущелье, с красивым звездным небом">
+                    <img class="hotels-item-image" src="images/catalog/hotel-1.jpg" width="300" height="212" alt="Ущелье, с красивым звездным небом">
                     <h3 class="hotels-title">Amara Resort & Spa</h3>
                     <p class="hotels-type">Гостиница</p>
                     <span class="hotels-price">От 4000 ₽</span>
@@ -139,7 +140,7 @@
                     <span class="hotels-rating">Рейтинг: 8,5</span>
                 </li>
                 <li class="hotels-item">
-                    <img src="images/catalog/hotel-2.jpg" width="300" height="212" alt="Небольшой лес, вдали видна радуга на фоне скалистых гор.">
+                    <img class="hotels-item-image" src="images/catalog/hotel-2.jpg" width="300" height="212" alt="Небольшой лес, вдали видна радуга на фоне скалистых гор.">
                     <h3 class="hotels-title">Villas at Poco Diablo</h3>
                     <p class="hotels-type">Гостиница</p>
                     <span class="hotels-price">От 5000 ₽</span>
@@ -148,7 +149,7 @@
                     <span class="hotels-rating">Рейтинг: 9,2</span>
                 </li>
                 <li class="hotels-item">
-                    <img src="images/catalog/hotel-3.jpg" width="300" height="212" alt="Пустынная местность с деревьями и горами.">
+                    <img class="hotels-item-image" src="images/catalog/hotel-3.jpg" width="300" height="212" alt="Пустынная местность с деревьями и горами.">
                     <h3 class="hotels-title">Desert Quail Inn</h3>
                     <p class="hotels-type">Гостиница</p>
                     <span class="hotels-price">От 2500 ₽</span>
@@ -157,7 +158,7 @@
                     <span class="hotels-rating">Рейтинг: 6,9</span>
                 </li>
                 <li class="hotels-item">
-                    <img src="images/catalog/hotel-4.jpg" width="300" height="212" alt="Плато на фоне темного звездного неба">
+                    <img class="hotels-item-image" src="images/catalog/hotel-4.jpg" width="300" height="212" alt="Плато на фоне темного звездного неба">
                     <h3 class="hotels-title">GreenTree Inn</h3>
                     <p class="hotels-type">Гостиница</p>
                     <span class="hotels-price">От 1500 ₽</span>
