--- a/catalog.html
+++ b/catalog.html
@@ -133,38 +133,62 @@
                 <li class="hotels-item">
                     <img class="hotels-item-image" src="images/catalog/hotel-1.jpg" width="300" height="212" alt="Ущелье, с красивым звездным небом">
                     <h3 class="hotels-title">Amara Resort & Spa</h3>
-                    <p class="hotels-type">Гостиница</p>
-                    <span class="hotels-price">От 4000 ₽</span>
-                    <a class="button" href="#">Подробнее</a>
-                    <button class="button-blue hotels-button" type="button">В избранное</button>
-                    <span class="hotels-rating">Рейтинг: 8,5</span>
+                    <div class="hotels-item-container">
+                      <p class="hotels-type">Гостиница</p>
+                      <span class="hotels-price">От 4000 ₽</span>
+                    </div>
+                    <div class="hotels-item-container">
+                      <a class="button" href="#">Подробнее</a>
+                      <button class="button-blue hotels-button" type="button">В избранное</button>
+                    </div>
+                    <div class="hotels-item-container">
+                      <span class="hotels-rating">Рейтинг: 8,5</span>
+                    </div>
                 </li>
                 <li class="hotels-item">
                     <img class="hotels-item-image" src="images/catalog/hotel-2.jpg" width="300" height="212" alt="Небольшой лес, вдали видна радуга на фоне скалистых гор.">
                     <h3 class="hotels-title">Villas at Poco Diablo</h3>
-                    <p class="hotels-type">Гостиница</p>
-                    <span class="hotels-price">От 5000 ₽</span>
-                    <a class="button" href="#">Подробнее</a>
-                    <button class="button-blue hotels-button" type="button">В избранном</button>
-                    <span class="hotels-rating">Рейтинг: 9,2</span>
+                    <div class="hotels-item-container">
+                      <p class="hotels-type">Гостиница</p>
+                      <span class="hotels-price">От 5000 ₽</span>
+                    </div>
+                    <div class="hotels-item-container">
+                      <a class="button" href="#">Подробнее</a>
+                      <button class="button-blue hotels-button" type="button">В избранном</button>
+                    </div>
+                    <div class="hotels-item-container">
+                      <span class="hotels-rating">Рейтинг: 9,2</span>
+                    </div>
                 </li>
                 <li class="hotels-item">
                     <img class="hotels-item-image" src="images/catalog/hotel-3.jpg" width="300" height="212" alt="Пустынная местность с деревьями и горами.">
                     <h3 class="hotels-title">Desert Quail Inn</h3>
-                    <p class="hotels-type">Гостиница</p>
-                    <span class="hotels-price">От 2500 ₽</span>
-                    <a class="button" href="#">Подробнее</a>
-                    <button class="button-blue hotels-button" type="button">В избранное</button>
-                    <span class="hotels-rating">Рейтинг: 6,9</span>
+                    <div class="hotels-item-container">
+                      <p class="hotels-type">Гостиница</p>
+                      <span class="hotels-price">От 2500 ₽</span>
+                    </div>
+                    <div class="hotels-item-container">
+                      <a class="button" href="#">Подробнее</a>
+                      <button class="button-blue hotels-button" type="button">В избранное</button>
+                    </div>
+                    <div class="hotels-item-container">
+                      <span class="hotels-rating">Рейтинг: 6,9</span>
+                    </div>
                 </li>
                 <li class="hotels-item">
                     <img class="hotels-item-image" src="images/catalog/hotel-4.jpg" width="300" height="212" alt="Плато на фоне темного звездного неба">
                     <h3 class="hotels-title">GreenTree Inn</h3>
-                    <p class="hotels-type">Гостиница</p>
-                    <span class="hotels-price">От 1500 ₽</span>
-                    <a class="button" href="#">Подробнее</a>
-                    <button class="button-blue hotels-button" type="button">В избранное</button>
-                    <span class="hotels-rating">Рейтинг: 5,0</span>
+                    <div class="hotels-item-container">
+                      <p class="hotels-type">Гостиница</p>
+                      <span class="hotels-price">От 1500 ₽</span>
+                    </div>
+                    <div class="hotels-item-container">
+                      <a class="button" href="#">Подробнее</a>
+                      <button class="button-blue hotels-button" type="button">В избранное</button>
+                    </div>
+                    <div class="hotels-item-container">
+                      <span class="hotels-rating">Рейтинг: 5,0</span>
+                    </div>
                 </li>
             </ul>
 
