--- a/index.html
+++ b/index.html
@@ -130,17 +130,17 @@
           <h2 class="visually-hidden">Социальные сети</h2>
           <ul class="footer-socials-list">
               <li class="footer-socials-item">
-                  <a href="https://vk.com/htmlacademy" class="button-vk">
+                  <a href="https://vk.com/htmlacademy" class="button-socials button-vk">
                   <span class="visually-hidden">Вконтакте</span>
                   </a>
               </li>
               <li class="footer-socials-item">
-                  <a href="https://t.me/htmlacademy" class="button-telegram">
+                  <a href="https://t.me/htmlacademy" class="button-socials button-telegram">
                   <span class="visually-hidden">Телеграм</span>
                   </a>
               </li>
               <li class="footer-socials-item">
-                  <a href="https://www.youtube.com/user/htmlacademyru" class="button-youtube">
+                  <a href="https://www.youtube.com/user/htmlacademyru" class="button-socials button-youtube">
                   <span class="visually-hidden">Ютуб</span>
                   </a>
               </li>
